test/classes/initializers/where-clause4.good
where-clause4.chpl:12: error: unresolved call '_new(type Foo, 3.4)'
where-clause4.chpl:2: note: candidates are: _new(type chpl_t, xVal)
$CHPL_HOME/modules/internal/localeModels/flat/LocaleModel.chpl:58: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/localeModels/flat/LocaleModel.chpl:58: note:                 _new(type chpl_t, parent_loc: locale)
$CHPL_HOME/modules/internal/localeModels/flat/LocaleModel.chpl:159: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:98: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:98: note:                 _new(type chpl_t, parent: locale)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:335: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:361: note:                 _new(type chpl_t, parent_loc: locale)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:361: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelLocale.chpl:403: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelError.chpl:32: note:                 _new(type chpl_t)
$CHPL_HOME/modules/internal/ChapelError.chpl:130: note:                 _new(type chpl_t, group: chpl_TaskErrors)
$CHPL_HOME/modules/internal/ChapelError.chpl:130: note:                 _new(type chpl_t, err: Error)
$CHPL_HOME/modules/internal/ChapelError.chpl:130: note:                 _new(type chpl_t)
$CHPL_HOME/modules/standard/SysError.chpl:46: note:                 _new(type chpl_t, err: syserr, details: string)
$CHPL_HOME/modules/standard/SysError.chpl:137: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:149: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:170: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:182: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:194: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:206: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:218: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:230: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:242: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:254: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:266: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:278: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:290: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:302: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:325: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:337: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/SysError.chpl:349: note:                 _new(type chpl_t, details: string, err: syserr)
$CHPL_HOME/modules/standard/Regexp.chpl:399: note:                 _new(type chpl_t, msg: string)
$CHPL_HOME/modules/internal/ChapelError.chpl:70: note:                 _new(type chpl_t)
$CHPL_HOME/modules/standard/SysError.chpl:162: note:                 _new(type chpl_t)
$CHPL_HOME/modules/standard/SysError.chpl:317: note:                 _new(type chpl_t)
